--- a/Enlightenment stone/Enlightenment stone/Packages/manifest.json
+++ b/Enlightenment stone/Enlightenment stone/Packages/manifest.json
@@ -5,14 +5,11 @@
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.postprocessing": "3.0.3",
-    "com.unity.render-pipelines.high-definition-config": "file:../LocalPackages/com.unity.render-pipelines.high-definition-config",
-    "com.unity.render-pipelines.lightweight": "7.5.3",
-    "com.unity.shadergraph": "7.5.3",
     "com.unity.test-framework": "1.1.20",
     "com.unity.textmeshpro": "2.1.1",
     "com.unity.timeline": "1.2.17",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.management": "4.0.1",
+    "com.unity.visualeffectgraph": "7.5.3",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
